add some explanation

--- a/tutorial/kg-graph-embeddings.ipynb
+++ b/tutorial/kg-graph-embeddings.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "arabic-murray",
+   "id": "adaptive-gossip",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "complete-interview",
+   "id": "decimal-barrel",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "talented-mixer",
+   "id": "marine-property",
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "emerging-briefing",
+   "id": "material-experiment",
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +112,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "cathedral-satin",
+   "id": "radio-reducing",
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "needed-emergency",
+   "id": "great-packing",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "second-interface",
+   "id": "extended-hungary",
    "metadata": {},
    "source": [
     "## Compute ComplEx Graph Embeddings"
@@ -154,18 +154,21 @@
   },
   {
    "cell_type": "markdown",
-   "id": "leading-oklahoma",
+   "id": "ancient-elimination",
    "metadata": {},
    "source": [
     "In this notebook we will compute graph embeddings using `kgtk graph-embeddings` command for the `arnold` subgraph and demonstrate a few applications.\n",
     "\n",
-    "First step is to augment the graph with `derived.P31x.tsv` file which considers occupations for humans as `instance of (P31)`"
+    "First step is to augment the `claims.wikibase-item.tsv.gz` filw with `derived.P31x.tsv` file which contains occupations for humans as `instance of (P31)`\n",
+    "\n",
+    "- `claims.wikibase-item.tsv.gz`: KGTK claims file non literal edges only\n",
+    "- `derived.P31x.tsv`: file with additional P31x links, adding occupation as `instance of` (computed)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "dimensional-tuesday",
+   "id": "lasting-repair",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,16 +179,35 @@
   },
   {
    "cell_type": "markdown",
-   "id": "radio-taylor",
+   "id": "concrete-royalty",
    "metadata": {},
    "source": [
-    "#### Compute the `ComplEx` graph embeddings with vectors of dimension `30`"
+    "#### Compute the `ComplEx` graph embeddings"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "reasonable-paragraph",
+   "metadata": {},
+   "source": [
+    "The `kgtk graph-embeddings` command takes as input a KGTK edge file and computes graph embeddings of user specified type, producing vectors of user specified dimensions.\n",
+    "\n",
+    "The following parameters are used in this instance:\n",
+    "\n",
+    "- `-op ComplEx`: compute ComplEx graph embeddings\n",
+    "- `--dimension 30`: desired dimension of the vectors\n",
+    "- `-ot kgtk`: output format - kgtk\n",
+    "- `--retain_temporary_data True`: retain the byproduct files, which we will use in subsequent steps\n",
+    "- `-T <folder path>`: temporary folder where the temporary files will be stored\n",
+    "- `-i <file>`: input file\n",
+    "- `-o <file>`: output file\n",
+    "- `--log <file>`: log file"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "prepared-corruption",
+   "id": "hidden-auction",
    "metadata": {},
    "outputs": [
     {
@@ -212,9 +234,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "living-resort",
+   "metadata": {},
+   "source": [
+    "Take a peek at the embeddings file."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "chemical-calcium",
+   "id": "human-applicant",
    "metadata": {},
    "outputs": [
     {
@@ -345,7 +375,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "architectural-binding",
+   "id": "tested-afternoon",
    "metadata": {},
    "source": [
     "#### The output is in `kgtk` format. Convert it to `word2vec` format for `gensim` similarity computation"
@@ -354,7 +384,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "preceding-appeal",
+   "id": "taken-allowance",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -387,7 +417,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "helpful-liver",
+   "id": "rubber-catalyst",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -396,7 +426,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "scheduled-glenn",
+   "id": "romantic-messenger",
    "metadata": {},
    "source": [
     "#### Load the vectos into `gensim`"
@@ -405,7 +435,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "republican-fourth",
+   "id": "freelance-optimization",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -414,7 +444,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "brilliant-clerk",
+   "id": "agreed-batch",
    "metadata": {},
    "source": [
     "Define a function to compute the `topn` similar vectors, and get the labels and descriptions of the matching Qnodes."
@@ -423,7 +453,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "equipped-spokesman",
+   "id": "broadband-madness",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -478,7 +508,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "whole-sunset",
+   "id": "damaged-dutch",
    "metadata": {},
    "source": [
     "The following code reads the vectors for Qnodes as `head` and Properties as `relation`.\n",
@@ -489,7 +519,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "configured-guidance",
+   "id": "numerous-inspection",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -532,7 +562,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "religious-honey",
+   "id": "reliable-exclusion",
    "metadata": {},
    "source": [
     "The following function takes as input a `Qnode` and a `Property`, and outputs a vector which should be similar to the value of the relation.\n",
@@ -543,7 +573,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "residential-muscle",
+   "id": "responsible-guess",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -562,7 +592,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "minimal-vegetable",
+   "id": "liked-killing",
    "metadata": {},
    "source": [
     "Get the vector for `Q37079` (Tom Cruise) + `P166` (award received), then find most similar entities"
@@ -571,7 +601,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "korean-mongolia",
+   "id": "improving-closer",
    "metadata": {},
    "outputs": [
     {
@@ -715,7 +745,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "trained-suggestion",
+   "id": "educated-highlight",
    "metadata": {},
    "source": [
     "Get the vector for `Q170564` (Terminator 2: Judgement Day) + `P161` (cast member), then find most similar entities"
@@ -724,7 +754,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "fresh-chamber",
+   "id": "lesser-newsletter",
    "metadata": {},
    "outputs": [
     {
@@ -878,7 +908,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "filled-austria",
+   "id": "binary-gossip",
    "metadata": {},
    "source": [
     "Get the vector for `Q104123` (Pulp Fiction) + `P161` (cast member), then find most similar entities"
@@ -887,7 +917,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "logical-triumph",
+   "id": "altered-struggle",
    "metadata": {},
    "outputs": [
     {
@@ -1041,7 +1071,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "attached-arizona",
+   "id": "successful-plaintiff",
    "metadata": {},
    "source": [
     "Get the vector for `Q2685` (Arnold Schwarzenegger), then find most similar entities"
@@ -1050,7 +1080,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "obvious-consideration",
+   "id": "regular-ethernet",
    "metadata": {},
    "outputs": [
     {
@@ -1204,7 +1234,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "together-softball",
+   "id": "drawn-buddy",
    "metadata": {},
    "source": [
     "Get the vector for `Q103148` (Lahn River), then find most similar entities"
@@ -1213,7 +1243,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "frank-whale",
+   "id": "loaded-compound",
    "metadata": {},
    "outputs": [
     {
@@ -1367,7 +1397,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "younger-apartment",
+   "id": "bacterial-victoria",
    "metadata": {},
    "source": [
     "## Prepare files for Google Projector"
@@ -1375,7 +1405,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "considered-trout",
+   "id": "polyphonic-colors",
    "metadata": {},
    "source": [
     "In this section, we will prepare `vectors` and `metadata` files for google projector.\n",
@@ -1390,16 +1420,17 @@
     "First step is to create a file with the following information ,\n",
     "\n",
     "1. node1 :- Qnode\n",
-    "2. node1;label :- label for node1\n",
-    "3. node2 :- `instance of` for node1\n",
-    "4. node2;label :- label for node2\n",
-    "5. embedding :- ComplEx graph embedding vector for node1"
+    "2. label :- name of the property\n",
+    "3. node2 :- embedding vector for node1\n",
+    "4. node1;label :- label for node1\n",
+    "5. type :- `instance of` for node1\n",
+    "6. type;label :- label for type"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "tamil-brass",
+   "id": "sapphire-mentor",
    "metadata": {},
    "outputs": [
     {
@@ -1436,7 +1467,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "communist-stevens",
+   "id": "characteristic-fitting",
    "metadata": {},
    "source": [
     "#### Take a peek at the file"
@@ -1445,7 +1476,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "intelligent-vegetation",
+   "id": "excessive-noise",
    "metadata": {},
    "outputs": [
     {
@@ -1621,7 +1652,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "velvet-failure",
+   "id": "cultural-ontario",
    "metadata": {},
    "source": [
     "#### Define a function to build the required files for google projector"
@@ -1630,7 +1661,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "burning-charles",
+   "id": "exciting-uganda",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1650,8 +1681,6 @@
     "            ftype_label = vals[5]\n",
     "            embeddings = \"\\t\".join(vals[2].strip().split(\",\"))\n",
     "\n",
-    "#             tag = \"{} ({})\".format(qnode, qnode_label)\n",
-    "\n",
     "            if qnode.startswith(\"Q\"):\n",
     "                metadata_file.write(\"{}\\t{}\\t{}\\t{}\\n\".format(qnode_label, qnode, _type, ftype_label.strip()))\n",
     "                vectors_file.write(embeddings)\n",
@@ -1664,7 +1693,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "wired-connectivity",
+   "id": "editorial-dragon",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1675,7 +1704,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "vocational-printing",
+   "id": "leading-department",
    "metadata": {},
    "source": [
     "Peek at the metadata file"
@@ -1684,7 +1713,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "bearing-bridges",
+   "id": "proof-stocks",
    "metadata": {},
    "outputs": [
     {
@@ -1814,7 +1843,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "broken-assets",
+   "id": "prescription-albany",
    "metadata": {},
    "source": [
     "Peek at the vectors file"
@@ -1823,7 +1852,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "rational-broadway",
+   "id": "banned-defendant",
    "metadata": {},
    "outputs": [
     {
@@ -1841,7 +1870,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "raised-sapphire",
+   "id": "bibliographic-yellow",
    "metadata": {},
    "source": [
     "## Google embedding projector\n",
@@ -1855,7 +1884,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "handled-psychiatry",
+   "id": "ultimate-canyon",
    "metadata": {},
    "source": [
     "#### PCA visualization of the embeddings, colored by `instance of`"
@@ -1863,7 +1892,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "celtic-toner",
+   "id": "federal-artist",
    "metadata": {},
    "source": [
     "![UMAP Color by Type](assets/gp-color-map-types.png \"UMAP Color by Type\")"
@@ -1872,7 +1901,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "individual-philip",
+   "id": "offshore-ghana",
    "metadata": {},
    "outputs": [],
    "source": []
