Near final version of the imdb tutorial

--- a/tutorial/kg-augment.ipynb
+++ b/tutorial/kg-augment.ipynb
@@ -4,8 +4,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Augment The Tutorial Graph\n",
-    "\n"
+    "# Augment The A Knowledge Graph Using CSV Files\n",
+    "\n",
+    "A common knowledge graph augmentation use case is to integrate structured data present in databases, CSV and Excel files. KGTK provides an alternative to languages such as R2RML (https://www.w3.org/TR/r2rml/) and RML (https://rml.io/specs/rml/) or tools such as Karma (https://github.com/usc-isi-i2/Web-Karma) for integrating tabluar data. These languages and tools work by defining a mapping between a structured souce and an ontology. KGTK provides capabilities to transform the original structured data into the TSV format used in KGTK to store KGs. \n",
+    "\n",
+    "This tutorial illustrates the KGTK approach using a CSV file downloaded from Kaggle (https://www.kaggle.com/stefanoleone992/imdb-extensive-dataset) containing information about moves from IMDb (https://www.imdb.com/).\n",
+    "\n",
+    "This tutorial is divided into multiple sections:\n",
+    "- Survey what is available in our KG and in the IMDb file\n",
+    "- Prepare the IMDb file for ingestion in KGTK\n",
+    "- Find overlap betwwen our KG and the IMDb KG\n",
+    "- Integrate knowledge from the IMDb KG into our KG\n",
+    "- Implement a better model for the data"
    ]
   },
   {
@@ -59,7 +69,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "These are all the files that we have, but I am tempted to just use the `all` file as it helps to keep the tutorial simpler"
+    "These are all the KG files that we use in this tutorial:"
    ]
   },
   {
@@ -116,14 +126,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "STORE: /Users/pedroszekely/Downloads/kypher/projects/tutorial-augment/temp.tutorial-augment/wikidata.sqlite3.db\n",
       "kgtk: kgtk\n",
       "USE_CASES_DIR: /Users/pedroszekely/Documents/GitHub/kgtk/use-cases\n",
-      "STORE: /Users/pedroszekely/Downloads/kypher/projects/tutorial-augment/temp.tutorial-augment/wikidata.sqlite3.db\n",
-      "kypher: kgtk query --graph-cache /Users/pedroszekely/Downloads/kypher/projects/tutorial-augment/temp.tutorial-augment/wikidata.sqlite3.db\n",
-      "TEMP: /Users/pedroszekely/Downloads/kypher/projects/tutorial-augment/temp.tutorial-augment\n",
-      "GRAPH: /Users/pedroszekely/Documents/GitHub/kgtk-tutorial-files/datasets/arnold-profiled\n",
-      "EXAMPLES_DIR: /Users/pedroszekely/Documents/GitHub/kgtk/examples\n",
       "OUT: /Users/pedroszekely/Downloads/kypher/projects/tutorial-augment\n",
+      "kypher: kgtk query --graph-cache /Users/pedroszekely/Downloads/kypher/projects/tutorial-augment/temp.tutorial-augment/wikidata.sqlite3.db\n",
+      "EXAMPLES_DIR: /Users/pedroszekely/Documents/GitHub/kgtk/examples\n",
+      "GRAPH: /Users/pedroszekely/Documents/GitHub/kgtk-tutorial-files/datasets/arnold-profiled\n",
+      "KGTK_OPTION_DEBUG: false\n",
+      "TEMP: /Users/pedroszekely/Downloads/kypher/projects/tutorial-augment/temp.tutorial-augment\n",
+      "KGTK_GRAPH_CACHE: /Users/pedroszekely/Downloads/kypher/projects/tutorial-augment/temp.tutorial-augment/wikidata.sqlite3.db\n",
+      "KGTK_LABEL_FILE: /Users/pedroszekely/Documents/GitHub/kgtk-tutorial-files/datasets/arnold-profiled/labels.en.tsv.gz\n",
       "all: /Users/pedroszekely/Documents/GitHub/kgtk-tutorial-files/datasets/arnold-profiled/all.tsv.gz\n",
       "label: /Users/pedroszekely/Documents/GitHub/kgtk-tutorial-files/datasets/arnold-profiled/labels.en.tsv.gz\n",
       "alias: /Users/pedroszekely/Documents/GitHub/kgtk-tutorial-files/datasets/arnold-profiled/aliases.en.tsv.gz\n",
@@ -188,8 +201,8 @@
       "P10\talias\t'gif'@en\tP10-alias-en-282226-0\t\n",
       "P10\talias\t'animation'@en\tP10-alias-en-2f86d8-0\t\n",
       "P10\talias\t'media'@en\tP10-alias-en-c1427e-0\t\n",
-      "CPU times: user 4.89 ms, sys: 10.8 ms, total: 15.6 ms\n",
-      "Wall time: 36.1 s\n"
+      "CPU times: user 7.07 ms, sys: 12 ms, total: 19.1 ms\n",
+      "Wall time: 42.1 s\n"
      ]
     }
    ],
@@ -201,23 +214,17 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "## Augment Using IMDb Data\n",
-    "Approach:\n",
-    "- Survey what is available in our KG and in the IMDb file\n",
-    "- Prepare the IMDb file for ingestion in KGTK\n",
-    "- Find overlap betwwen our KG and the IMDb KG\n",
-    "- Integrate knowledge from the IMDb KG into our KG\n",
-    "- Implement a better model for the data"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Survey the data\n",
-    "Count the number of movies in our KG that have an `IMDb ID (P345)`.\n",
-    "The KG has many movies with IMDb identifiers:"
+    "## Survey the data in the IMDb file\n",
+    "\n",
+    "The first step is to determine whether our KG has IMDb identifiers, as this will make it easy to integrate the IMDb data.\n",
+    "The following query counts the number of items in our KG that have an `IMDb ID (P345)`.\n",
+    "Fortunately, our KG has many entities with IMDb identifiers:"
    ]
   },
   {
@@ -280,9 +287,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As there are many movies that have IMDb ids, we can augment our graph using data from IMDB. The following file comes from Kaggle: https://www.kaggle.com/stefanoleone992/imdb-extensive-datasethttps://www.kaggle.com/stefanoleone992/imdb-extensive-dataset\n",
+    "As there are many items that have IMDb ids, we can augment our graph using data from IMDB. The following file comes from Kaggle: https://www.kaggle.com/stefanoleone992/imdb-extensive-dataset\n",
     "\n",
-    "There are many fields in the IMDb file missing from Wikidata. \n",
+    "Our KG, a subset of Wikidata is missing many fields that are present in the IMDb file. \n",
     "For example, when we look at `film (Q11424)` in our browser http://ckg07.isi.edu:3008/browser/Q11424, we see that there is no information about ratings."
    ]
   },
@@ -735,11 +742,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Prepare the IMDb file for ingestion in KGTK\n",
-    "KGTK supports node files consisting of a column with heading `id` to identify a node and additional column with headings corresponding to properties for a node.\n",
+    "## Prepare the IMDb file for ingestion in KGTK\n",
+    "This step illustrates the power of the KGTK approach: you canb convert the CSV file into a KG by simply renaming the column in the file that contains the identifier for the records to have the column heading `id`. Once you do this, the file becomes a KGTK node file, where the `id` column identifies a node, and the other columns define properties about the node. \n",
     "\n",
-    "We can use Pandas to convert the IMDb file to a KG node file by simply renaming the `imdb_title_id` column to `node1` as it is the identifier for a movie.\n",
-    "We also need to convert the values in the cells to strings:"
+    "The initial node file is only a first approaximation, as additional transformations will be needed to make the data compatible with the KG.\n",
+    "In this step, you will use use Pandas to convert the IMDb file to a KG node file by renaming the `imdb_title_id` column to `id` as it is the identifier for a movie.\n",
+    "\n",
+    "We will also convert non-numeric values in the cells to strings to enable us later to use string transformations to clean the data."
    ]
   },
   {
@@ -1199,7 +1208,9 @@
    "source": [
     "## To-Do: avoid this cell\n",
     "\n",
-    "The problem is that the output of of the previous cell puts quotes around the column headings. I manually edited the file to remove the quotes and stored it in the inpuppt folder, so now we need to copy it `$TEMP`, somehow !cp {input_path} $TEMP is not working for me."
+    "The problem is that the output of of the previous cell puts quotes around the column headings. I manually edited the file to remove the quotes and stored it in the inpuppt folder, so now we need to copy it `$TEMP`, somehow !cp {input_path} $TEMP is not working for me.\n",
+    "\n",
+    "Amandeep or Craig: in the previous cell we want to write the dataframe as a node file, with all non-numeric columns converted to strings, but the headings should not be strings."
    ]
   },
   {
@@ -1222,7 +1233,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Convert the very wide node file we constructed above to and edge file:"
+    "After converting the original CSV file to a node file,  you can use the `normmalize-nodes` command to convert the node file to and edge file usinf the `node1/label/node2` headings. The columns of the original file become the labels of the edges and appear in the second column. Having done this, the original IMDB file has become a KG that you can transform using other KGTK commands."
    ]
   },
   {
@@ -1234,8 +1245,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 8.89 s, sys: 1.74 s, total: 10.6 s\n",
-      "Wall time: 11.1 s\n"
+      "CPU times: user 9.59 s, sys: 1.89 s, total: 11.5 s\n",
+      "Wall time: 12.2 s\n"
      ]
     },
     {
@@ -1381,8 +1392,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 11.6 ms, sys: 41.6 ms, total: 53.2 ms\n",
-      "Wall time: 12.8 s\n"
+      "CPU times: user 13.1 ms, sys: 39.5 ms, total: 52.5 ms\n",
+      "Wall time: 16.1 s\n"
      ]
     },
     {
@@ -1460,7 +1471,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Find overlap betwwen our KG and the IMDb KG\n",
+    "## Find overlap betwwen our KG and the IMDb KG\n",
     "\n",
     "The IMDb KG uses IMDb identifiers as nodes, and our KG, extracted from Wikidata, defined property `IMDb ID (P345)` to record the IMDb identifiers of movies.\n",
     "\n",
@@ -1723,14 +1734,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "So, over 6,000 entities in our KG have IMDb identifers, about half of these are films, and about have of those appear in our IMDb KG."
+    "So, over 6,000 entities in our KG have IMDb identifers, about half of these are films, and about half of those appear in our IMDb KG."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Integrate knowledge from the IMDb KG into our KG\n",
+    "## Integrate knowledge from the IMDb KG into our KG\n",
     "\n",
     "There are many fields in the IMDb KG that we could integrate into our KG. In this tutorial we will focus on three fields: the `reviews_from_users`, `reviews_from_critics` and `duration`.\n",
     "\n",
@@ -1743,11 +1754,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's start with `reviews_from_users`, `reviews_from_critics`, which are counts. If we search inh the browser we see very specific properties named `number of ...`, but none referring to number of reviews, so we will create two new properties, and we will give them the identifiers `Pnumber_of_user_reviews` and `Pnumber_of_critic_reviews`\n",
-    "> We follow the Wikidata convention to where the identifiers for properties start with `P` and the identifiers for entities start with `Q`. KGTK does not require to use numbers following `P` or `Q`, and it does not require that we follow the `P/Q` convention.\n",
+    "Let's start with `reviews_from_users`, `reviews_from_critics`, which are counts. If we search in the browser we see very specific properties named `number of ...`, but none referring to number of reviews, so we will create two new properties, and we will give them the identifiers `Pnumber_of_user_reviews` and `Pnumber_of_critic_reviews`\n",
+    "> We follow the Wikidata convention where the identifiers for properties start with `P` and the identifiers for entities start with `Q`. KGTK does not require to use numbers following `P` or `Q`, and it does not require that we follow the `P/Q` convention.\n",
     "\n",
-    "We will integrate the data by building a node file, as this makes it possibe to integrate all the data using a single query.\n",
-    "We use the `--opt` clause so that if the IMDb KG has a null, we still output the result:"
+    "To integrate the data we will use two KGs:\n",
+    "- The `imdbkg` with the data we pulled directly from the IMDb csv file\n",
+    "- The `external_id` subset of our KG that contains all external identifiers for all items in our KG.\n",
+    "\n",
+    "The `match` clause does a join on the identifers, enabling us to pull from the `imdbkg` the items thatalso exist in our KG.\n",
+    "The `opt` clause (optional) retrieves the `reviews_from_users` property from the `imdbkg` KG\n",
+    "We use the `opt` clause so that if the `imdbkg` has a null, we still output the result.\n",
+    "\n",
+    "The `return` clause builds a new node file: we use the `film` node from our KG as the `id` for our node file, and we translate the `reviews_from_users` data from the `imdbkg` as a `Pnumber_of_user_reviews`, a new property in our KG (below we extend this query to integrate all the data).\n",
+    "> In KGTK, you can integrate data from external sources using queries to map from one schema (ontology) to another, and do ETL transformations in one place.\n",
+    "\n",
+    "Our KG is starting to take shape. For every film in the intersection of the two KGs, we now have a new property `Pnumber_of_user_reviews`:"
    ]
   },
   {
@@ -1883,7 +1904,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Integrate `reviews_from_critics` and `duration` by adding them to our quey.\n",
+    "You can extend the query to integrate `reviews_from_critics` and `duration` by adding additional `opt` clauses.\n",
     "Wikidata has propery `duration (P2047`), so we reuse it:"
    ]
   },
@@ -2055,6 +2076,8 @@
     "For example \"142 minutes\" is represented as `142Q7727`.\n",
     "\n",
     "It is easy to incorporate the units into our query by using the `printf` statement to combine multiple variables into a formatted string:\n",
+    "> The case of units of measure is a good example of the benefit to do schema mapping and ETL in the same query.\n",
+    "\n",
     "> We illustrate the use the KGTK function `kgtk_quantity_number` in the `order-by` clause to extract the numeric value of a quantity structured literals (https://kgtk.readthedocs.io/en/latest/transform/query/#functions-on-kgtk-numbers-and-quantities)"
    ]
   },
@@ -2067,8 +2090,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 9.79 ms, sys: 17.5 ms, total: 27.3 ms\n",
-      "Wall time: 795 ms\n"
+      "CPU times: user 10.5 ms, sys: 16.7 ms, total: 27.2 ms\n",
+      "Wall time: 1.18 s\n"
      ]
     },
     {
@@ -2230,7 +2253,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The query above extracts data from the simple `imdbkg` graph that uses the column headings as properties. The query maps the properties and data to new or existing Wikidata properties, and performs simple data cleaning to conform to the Wikidata and KGTK format requirement. The resulting KG is in KGTK node format where the properties appear in the column headings; we save this graph in `$TEMP/imdb-import.node.tsv`:\n",
+    "The query above extracts data from the simple `imdbkg` graph that uses the column headings as properties. The query maps the properties and data to new or existing Wikidata properties that we use in our KG, and performs simple data cleaning to conform to the Wikidata and KGTK format requirement. The resulting KG is in KGTK node format where the properties appear in the column headings; we save this graph in `$TEMP/imdb-import.node.tsv`:\n",
     "\n",
     "> It is possible to create the KGTK node file using Pandas as the node file has very simmilar structure to the original CSV file. One of the advantages of KGTK is that it empowers users to use tools that they are familiar with, e.g., Pandas, to transform KGTK graphs. Integration with KGTK is seamless."
    ]
@@ -2266,6 +2289,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "The last step is to convert the node file to a an edge file so that it is in the standard form used by all KGTK commands.\n",
     "Convert the node file to edges and add edge ids:\n",
     "\n",
     "> If you had used Pandas to create the graph in node format, this same command would transform it into and edge file, and make the4 graph ready for use with any other KGTL commands."
@@ -2515,7 +2539,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Deduplicate the durations (`duration (P2047)`)\n",
+    "## Deduplicate the durations (`duration (P2047)`)\n",
     "Wikidata defines durations for many films. If we want to integrate the IMDb data into our KG, we must be careful as there may be inconsitent durations.\n",
     "\n",
     "Approach:\n",
@@ -3058,7 +3082,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Implement a better model for the IMDb data\n",
+    "## Implement a better model for the IMDb data\n",
     "\n",
     "The data model we just implemented is very simple. In this section, we will improve it to be more compatible with how Wikidata models data.\n",
     "We will:\n",
@@ -3834,9 +3858,9 @@
     "tags": []
    },
    "source": [
-    "### Summary of this section:\n",
+    "## Summary of this tutorial:\n",
     "\n",
-    "In this section we:\n",
+    "In this tutorial we:\n",
     "- Extracted data from a CSV file to add to our KG\n",
     "- Converted a CSV file into a KGTK graph using Pandas to create a simple KG (this step is similar to doing a direct mapping using R2RML https://www.w3.org/TR/rdb-direct-mapping/)\n",
     "- Used KGTK to extract/transform/load (ETL) the data into a simple model consistent with the Wikidata ontology\n",
@@ -3852,9 +3876,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Deploy the results\n",
+    "# Deploy the results (Optional)\n",
     "\n",
-    "Deplot the tutorial files after completing this notebook."
+    "Deploy the tutorial files after completing this notebook."
    ]
   },
   {
@@ -3896,13 +3920,6 @@
    "source": [
     "!ls -l {project_deployment_path}"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
